--- a/view/front_office/signup.html
+++ b/view/front_office/signup.html
@@ -121,33 +121,33 @@
       <input type="hidden" name="action" value="signup">
        
       <div class="inputbox">
-        <input type="text" name="nom" id="nom" required>
+        <input type="text" name="nom" id="nom" >
         <label for="Nom">Nom</label>
       </div>
 
       <div class="inputbox">
         <div class="inputbox">
-          <input type="text" name="prenom" id="prenom" required>
+          <input type="text" name="prenom" id="prenom" >
           <label for="Prenom">Prenom</label>
         </div>
 
       <div class="inputbox">
-        <input type="email" name="usermail" id="usermail" required>
+        <input type="email" name="usermail" id="usermail" >
         <label for="usermail">Email</label>
       </div>
 
       <div class="inputbox">
-        <input type="password" name="password" id="password" required>
+        <input type="password" name="password" id="password">
         <label for="password">Mot de passe</label>
       </div>
 
       <div class="inputbox">
-        <input type="password" name="confirmPassword" id="confirmPassword" required>
+        <input type="password" name="confirmPassword" id="confirmPassword" >
         <label for="confirmPassword">Confirmer le mot de passe</label>
       </div>
 
       <div class="inputbox">
-        <select name="userRole" id="userRole" required>
+        <select name="userRole" id="userRole">
             <option value="">-- Choisir un rôle --</option>
             <option value="admin">Admin</option>
             <option value="user">Utilisateur</option>
@@ -157,22 +157,22 @@
       </div>
 
       <div class="inputbox">
-        <input type="text" name="adress" id="adress" required>
+        <input type="text" name="adress" id="adress" >
         <label for="adress">Adresse</label>
       </div>
 
       <div class="inputbox">
-        <input type="text" name="Nationalite" id="Nationalite" required>
+        <input type="text" name="Nationalite" id="Nationalite" >
         <label for="Nationalite">Nationalité</label>
       </div>
 
       <div class="inputbox">
-        <input type="date" name="ddn" id="ddn" required>
+        <input type="date" name="ddn" id="ddn" >
         <label for="ddn">Date de naissance</label>
       </div>
 
       <div class="inputbox">
-        <input type="text" name="num" id="num" required>
+        <input type="text" name="num" id="num" >
         <label for="num">Numéro de téléphone</label>
       </div>
 
@@ -254,8 +254,7 @@
       alert("Corrigez les erreurs :\n" + errorMessage);
     }
 
-
-
     return isValid;
- 
   }
+</script>
+  
