--- a/view/front_office/login.html
+++ b/view/front_office/login.html
@@ -166,7 +166,7 @@
             <input type="checkbox" name="remember"> Remember me
           </label>
           <label>
-            <a href="#">Forgot password?</a>
+            <a href="forgot_password.php">Forgot password?</a>
           </label>
         </div>
         <button type="submit" name="action" value="login">Log in</button>
@@ -177,5 +177,8 @@
     </div>
   </div>
 </section>
+<!-- Ionicons CDN -->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
