--- a/view/front_office/login.html
+++ b/view/front_office/login.html
@@ -153,12 +153,12 @@
       <form id="loginForm" method="POST" action="login.php">
         <div class="inputbox">
           <ion-icon name="mail-outline"></ion-icon>
-          <input type="email" id="usermail" name="usermail" required>
+          <input type="email" id="usermail" name="usermail" >
           <label>Email</label>
         </div>
         <div class="inputbox">
           <ion-icon name="lock-closed-outline"></ion-icon>
-          <input type="password" id="password" name="password" required>
+          <input type="password" id="password" name="password" >
           <label>Password</label>
         </div>
         <div class="forget">
@@ -171,7 +171,7 @@
         </div>
         <button type="submit" name="action" value="login">Log in</button>
         <div class="register">
-          <p>Don't have an account? <a href="signup.html">Register</a></p>
+          <p>Don't have an account? <a href="signup.php">Register</a></p>
         </div>
       </form>
     </div>
