--- a/View/back_office/pages/samples/blank-page.html
+++ b/View/back_office/pages/samples/blank-page.html
@@ -279,7 +279,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../../pages/tables/basic-table.html">
+              <a class="nav-link" href="../../pages/tables/basic-table.php">
                 <span class="icon-bg"><i class="mdi mdi-table-large menu-icon"></i></span>
                 <span class="menu-title">Tables</span>
               </a>
